starting to finish up login
