# back-end/public/swagger.json
@@ -40,6 +40,37 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"LoginResponse": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"error": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"success"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LoginPayload": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -78,7 +109,7 @@
 				]
 			}
 		},
-		"/user": {
+		"/user/register": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
@@ -104,6 +135,38 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/UserCreationPayload"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/user/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/LoginResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginPayload"
 							}
 						}
 					}
